UPDATE: index.yml

--- a/index.yml
+++ b/index.yml
@@ -16,3 +16,4 @@ table_of_content:
   - VueCDN-installation_app.js_structure.md
   - VueCLI-installation_structure_components.md
   - VueCLI-vue_options.md
+  - Web&Images.md
