--- a/index.yml
+++ b/index.yml
@@ -17,3 +17,4 @@ table_of_content:
   - VueCLI-installation_structure_components.md
   - VueCLI-vue_options.md
   - Web&Images.md
+  - gitlab-runner.md
