--- a/index.yml
+++ b/index.yml
@@ -18,3 +18,5 @@ table_of_content:
   - VueCLI-vue_options.md
   - Web&Images.md
   - gitlab-runner.md
+  - Machine-learning.md
+  - Deep-learning.md
