--- a/index.yml
+++ b/index.yml
@@ -18,4 +18,4 @@ table_of_content:
   - VueCLI-vue_options.md
   - Web&Images.md
   - gitlab-runner.md
-  - Machine-learning.md
+  - Machine-learning-course-YT.md
