FEAT: md-repo refactor

--- a/index.yml
+++ b/index.yml
@@ -1,21 +1,23 @@
 table_of_content:
-  - CassandraDB-basics.md
-  - Docker-basics.md
-  - Docker-cassandraDB_deployment.md
-  - Docker-containers.md
-  - Docker-images.md
-  - Docker-images.md
-  - Docker-mysqlDB_deployment.md
-  - Docker-nuxt_deployment.md
-  - LARAVEL-blade_&_statements.md
-  - LARAVEL-installation_structure_MVC.md
-  - LARAVEL-migrations_&_seeders.md
-  - LARAVEL-model_controller.md
-  - LARAVEL-resouces_controller.md
-  - NodeJS-cassandra_driver.md
-  - VueCDN-installation_app.js_structure.md
-  - VueCLI-installation_structure_components.md
-  - VueCLI-vue_options.md
-  - Web&Images.md
-  - gitlab-runner.md
-  - Machine-learning-course-YT.md
+  - cassandra/cassandra.md
+  - cassandra/cassandra-nodejs-driver.md
+  - docker/docker-basics.md
+  - docker/docker-cassandra.md
+  - docker/docker-containers.md
+  - docker/docker-images.md
+  - docker/docker-mysql.md
+  - docker/docker-nuxt.md
+  - laravel/laravel-blade.md
+  - laravel/laravel-migrations-seeders.md
+  - laravel/laravel-mvc.md
+  - laravel/laravel-model-controller.md
+  - laravel/resource-controller.md
+  - vue/vue-components.md
+  - vue/vue-options.md
+  - vue/vue-structure.md
+  - seo/seo-images.md
+  - gitlab/gitlab-runner.md
+  - machine-learning/piero-savastano-course/machine-learning.md
+  - machine-learning/udemy-bootcamp/01-environment.md
+  - machine-learning/udemy-bootcamp/02-python.md
+  - machine-learning/udemy-bootcamp/03-numpy.md
