--- a/index.yml
+++ b/index.yml
@@ -23,3 +23,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/03-numpy.md
   - machine-learning/udemy-bootcamp/04-pandas.md
   - machine-learning/udemy-bootcamp/05-matplotlib.md
+  - machine-learning/udemy-bootcamp/06-seaborn.md
