--- a/index.yml
+++ b/index.yml
@@ -24,3 +24,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/04-pandas.md
   - machine-learning/udemy-bootcamp/05-matplotlib.md
   - machine-learning/udemy-bootcamp/06-seaborn/06-seaborn.md
+  - machine-learning/udemy-bootcamp/07-pandas-data-visualization/07-pandas-data-visualization.md
