FEAT: 09 Geographical Plotting

--- a/index.yml
+++ b/index.yml
@@ -26,3 +26,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/06-seaborn/06-seaborn.md
   - machine-learning/udemy-bootcamp/07-pandas-data-visualization/07-pandas-data-visualization.md
   - machine-learning/udemy-bootcamp/08-plotly-and-cufflinks/08-plotly-and-cufflinks.md
+  - machine-learning/udemy-bootcamp/09-geographical-plotting/09-geographical-plotting.md
