--- a/index.yml
+++ b/index.yml
@@ -28,3 +28,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/08-plotly-and-cufflinks/08-plotly-and-cufflinks.md
   - machine-learning/udemy-bootcamp/09-geographical-plotting/09-geographical-plotting.md
   - machine-learning/udemy-bootcamp/10-ml-intro.md
+  - machine-learning/udemy-bootcamp/11-linear-regression.md
