--- a/index.yml
+++ b/index.yml
@@ -29,3 +29,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/09-geographical-plotting/09-geographical-plotting.md
   - machine-learning/udemy-bootcamp/10-ml-intro.md
   - machine-learning/udemy-bootcamp/11-linear-regression.md
+  - machine-learning/udemy-bootcamp/12-cross-validation-and-bias-variance-tradeoff.md
