--- a/index.yml
+++ b/index.yml
@@ -30,3 +30,5 @@ table_of_content:
   - machine-learning/udemy-bootcamp/10-ml-intro.md
   - machine-learning/udemy-bootcamp/11-linear-regression.md
   - machine-learning/udemy-bootcamp/12-cross-validation-and-bias-variance-tradeoff.md
+  - machine-learning/udemy-bootcamp/13-logistic-regression.md
+  - machine-learning/udemy-bootcamp/14-k-nearest-neighbors/14-k-nearest-neighbors.md
