FEAT: 15 Tree Method

--- a/index.yml
+++ b/index.yml
@@ -32,3 +32,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/12-cross-validation-and-bias-variance-tradeoff.md
   - machine-learning/udemy-bootcamp/13-logistic-regression.md
   - machine-learning/udemy-bootcamp/14-k-nearest-neighbors/14-k-nearest-neighbors.md
+  - machine-learning/udemy-bootcamp/15-tree-method.md
