WIP: 17 K means clustering

--- a/index.yml
+++ b/index.yml
@@ -33,3 +33,5 @@ table_of_content:
   - machine-learning/udemy-bootcamp/13-logistic-regression.md
   - machine-learning/udemy-bootcamp/14-k-nearest-neighbors/14-k-nearest-neighbors.md
   - machine-learning/udemy-bootcamp/15-tree-method.md
+  - machine-learning/udemy-bootcamp/16-support-vector-machines.md
+  - machine-learning/udemy-bootcamp/17-k-means-clustering.md
