--- a/index.yml
+++ b/index.yml
@@ -36,5 +36,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/16-support-vector-machines.md
   - machine-learning/udemy-bootcamp/17-k-means-clustering/17-k-means-clustering.md
   - machine-learning/udemy-bootcamp/18-principal-component-analysis/18-principal-component-analysis.md
-
-  
+  - machine-learning/udemy-bootcamp/19-recommender-systems.md
