FEAT: 22 multiclass classification

--- a/index.yml
+++ b/index.yml
@@ -38,4 +38,5 @@ table_of_content:
   - machine-learning/udemy-bootcamp/18-principal-component-analysis/18-principal-component-analysis.md
   - machine-learning/udemy-bootcamp/19-recommender-systems.md
   - machine-learning/udemy-bootcamp/20-natural-language-processing.md
-  
+  - machine-learning/udemy-bootcamp/deep-learning/21-deep-learning.md
+  - machine-learning/udemy-bootcamp/deep-learning/22-multiclass-classification.md
