--- a/index.yml
+++ b/index.yml
@@ -40,3 +40,5 @@ table_of_content:
   - machine-learning/udemy-bootcamp/20-natural-language-processing.md
   - machine-learning/udemy-bootcamp/deep-learning/21-deep-learning.md
   - machine-learning/udemy-bootcamp/deep-learning/22-multiclass-classification.md
+  - machine-learning/udemy-bootcamp/deep-learning/23-tensorflow.md
+  - machine-learning/udemy-bootcamp/deep-learning/24-exploratory-data-analysis.md
