--- a/index.yml
+++ b/index.yml
@@ -42,3 +42,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/deep-learning/22-multiclass-classification.md
   - machine-learning/udemy-bootcamp/deep-learning/23-tensorflow.md
   - machine-learning/udemy-bootcamp/deep-learning/24-exploratory-data-analysis.md
+  - machine-learning/udemy-bootcamp/deep-learning/25-tensorboard.md
