--- a/index.yml
+++ b/index.yml
@@ -43,3 +43,4 @@ table_of_content:
   - machine-learning/udemy-bootcamp/deep-learning/23-tensorflow.md
   - machine-learning/udemy-bootcamp/deep-learning/24-exploratory-data-analysis.md
   - machine-learning/udemy-bootcamp/deep-learning/25-tensorboard.md
+  - machine-learning/udemy-bootcamp/deep-learning/26-spark.md
